--- a/bank-account-ui/src/app/account/account.component.html
+++ b/bank-account-ui/src/app/account/account.component.html
@@ -1,51 +1,65 @@
-<div class="row">
-  <div class="col-md-3">
+<div style="margin: 20px auto" class="row ">
+  <div class="col-md-4">
     <div class="card">
       <div class="card-header">
         Account List
       </div>
       <div class="card-body">
-        <table class="table">
+        <table class="table  table-hover">
           <thead class="table-dark">
             <tr>
               <th>Account Number</th>
               <th>Balance</th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let account of accounts" (click)="selectAccount(account.number)">
+            <tr *ngFor="let account of accounts">
               <td>{{account.number}}</td>
-              <td>{{account.balance}}</td>
+              <td>{{account.balance}} DH</td>
+              <td><button type="button" class="btn btn-outline-info" (click)="selectAccount(account.number)">show
+                  details</button></td>
             </tr>
           </tbody>
         </table>
       </div>
     </div>
   </div>
-  <div class="col-md-9">
-    <div class="card">
+  <div class="col-md-5">
+    <div class="card" *ngIf="(selectedAccount | json) != ({} | json)">
       <div class="card-header">
         Account Informations
       </div>
-      <div class="card-body">
+      <div class="card-body" >
         <span class="fw-bold">Account Number: </span>
         <p class="fw-normal">{{selectedAccount.number}}</p>
         <span class="fw-bold">Account Balance: </span>
         <p class="fw-normal">{{selectedAccount.balance}} DH</p>
         <table class="table">
-          <thead class="table-dark">
+          <thead class="table-dark ">
             <tr>
               <th colspan="2">transaction history</th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let op of selectedAccount.operations"  [ngStyle]="{'background-color': (op.type=='D') ? '#cffcc7' : '#f9caca'}" >
-              <td>{{op.dateTime | date :"dd/MM/yyyy  HH:mm"}}</td>
+            <tr *ngFor="let op of selectedAccount.operations"
+              [ngStyle]="{'background-color': (op.type=='D') ? '#cffcc7' : '#f9caca'}">
+              <td style="width:40%">{{op.dateTime | date :"dd/MM/yyyy HH:mm"}}</td>
               <td>{{(op.type=='D')?"+":"-"}} {{op.amount}} DH</td>
             </tr>
           </tbody>
         </table>
       </div>
+
+    </div>
+  </div>
+  <div class="col-md-3">
+    <div *ngIf="displaytost" class="alert alert-success d-flex align-items-center" >
+      <div>
+        {{message}}
+      </div>
+        <button  type="button" class="btn-close me-2 m-auto  "
+          (click)="closeToast()"></button>
     </div>
   </div>
 </div>
